--- a/deamons/rasp-updater.service
+++ b/deamons/rasp-updater.service
@@ -4,7 +4,7 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
-ExecStartPre=/usr/bin/sleep 10
+ExecStartPre=sleep 10
 ExecStart=git --git-dir=/home/pi/raspi-box/.git pull origin master
 Type=simple
 User=pi
